@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T01:38:15Z",
+  "timestamp" : "2022-05-08T16:25:00Z",
   "count_outdated" : 1818,
   "uniques_outdated" : 358,
-  "count" : 1858,
-  "uniques" : 383,
+  "count" : 1859,
+  "uniques" : 384,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 3,
       "count_minmax": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
