@@ -1,3 +1,9 @@
+2022-05-08T16:25:00Z:
+* notice: last 14d: all unq: 41 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 1818 358 / 1858 383
+* notice: next accum: outdated-all outdated-unq / all unq: 1818 358 / 1859 384
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +2 / -0 -0
+
 2022-05-08T01:38:15Z:
 * notice: last 14d: all unq: 40 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 1818 358 / 1857 383
